# hs-lambda-calculus

./: CHANGELOG.md  README.md  hs-lambdaCalculus.cabal  prelude.txt  stack.yaml
src/: Lambda.hs  Main.hs  Onebot.hs  Parser.hs  REPL.hs
