name:                hs-lambdaCalculus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yoorkin/hs-lambdaCalculus#readme
license:             BSD3
license-file:        LICENSE
author:              Yorkin Chen
maintainer:          cyb_yorkin@outlook.com
copyright:           2022 Yorkin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable lambdaCalculus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       parsec,
                       containers,
                       websockets,
                       network,
                       aeson,
                       text,
                       utf8-string,
                       bytestring,
                       scientific,
                       split
  other-modules:  Lambda,Onebot,Parser,REPL

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
